# copy_filedump

./: 24585  Makefile  README.md  my_filedump.py  pyproject.toml
src/: my_filedump.py
tests/: test_filedump.py
tests/blobs/: 16398  16398-2
