[tool.poetry]
name = "copy-filedump"
version = "0.1.0"
description = "Sertified filedump utility"
authors = ["Vyacheslav Ukraintsev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.select = ["ALL"]
line-length = 100
lint.ignore = [
    'D211',
    'D213',
    'COM812',
    'ISC001',
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true